--- a/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
+++ b/src/app/modificar-enfrentamientos/modificar-enfrentamientos.page.html
@@ -62,20 +62,20 @@
                                           <img class="centrar" src="{{enfrent.logoLocal}}" style="height: 50%; width: 50%" >
                                         </ion-row>
                                         <ion-row>
-                                            <ion-input class="centrar" name="nameLocal" [(ngModel)]="enfrent.nameLocal"  type="text" ngModel required></ion-input>
+                                            <ion-input (click)="isModifico(enfrent)"  class="centrar" name="nameLocal" [(ngModel)]="enfrent.nameLocal"  type="text" ngModel required></ion-input>
                                         </ion-row>
                                     </ion-col>
                                     <ion-col [size]="4" *ngIf="enfrent.golLocal!=null || enfrent.golVisit!=null;else other_content">
                                         <ion-row class="display-flex">
                                             <p class="text-resultado"> Resultado</p>
                                             <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="5">
-                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="number" ngModel required></ion-input>
+                                                <ion-input (click)="isModifico(enfrent)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golLocal"  type="number" ngModel required></ion-input>
                                             </ion-col>
                                             <ion-col class="ion-no-margin ion-no-padding display-flex" [size]="2">
                                                 
                                             </ion-col>
                                             <ion-col [size]="5" class="ion-no-margin ion-no-padding display-flex">
-                                                <ion-input class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="number" ngModel required></ion-input>
+                                                <ion-input (click)="isModifico(enfrent)"  class="ion-no-margin ion-no-padding text-goles" name="golLocal" [(ngModel)]="enfrent.golVisit"  type="number" ngModel required></ion-input>
                                             </ion-col>
                                         </ion-row>
                                     </ion-col>
@@ -93,13 +93,13 @@
                                           <img class="centrar" src="{{enfrent.logoVisit}}" style="height: 50%; width: 50%" >
                                         </ion-row>
                                         <ion-row>
-                                            <ion-input class="centrar" name="nameVisit" [(ngModel)]="enfrent.nameVisit"  type="text" ngModel required></ion-input>
+                                            <ion-input (click)="isModifico(enfrent)" class="centrar" name="nameVisit" [(ngModel)]="enfrent.nameVisit"  type="text" ngModel required></ion-input>
                                         </ion-row>
                                     </ion-col>
                                 </ion-row>
                                 <ion-row>
                                     <ion-col [size]="12" class="display-flex">
-                                        <ion-button class="centrar" style="text-align: center">
+                                        <ion-button [disabled]="!enfrent.modificoDatos" class="centrar" style="text-align: center" (click)="modificarDatosPartido(enfrent)">
                                             MODIFICAR
                                         </ion-button>
                                     </ion-col>
