pantalla puntajes, servicios puntajes general y puntajes por fecha

--- a/src/app/partidos/partidos.page.html
+++ b/src/app/partidos/partidos.page.html
@@ -46,7 +46,7 @@
         <ion-row  *ngFor="let grupo of gruposDelUser">
             <ion-col [size]="12">
                 <ion-list>
-                    <ion-item class="border-light">
+                    <ion-item class="border-light" (click)="verPuntajes(grupo)">
                         <a *ngIf="grupo.idUserCreador == this.idUserGreaGrupo"> <ion-badge class="text-white" style="margin-right: 1rem">Creador </ion-badge> </a>
                         <p class="text-white"> {{grupo.nameGrupo}}</p>
                         <ion-button *ngIf="grupo.idUserCreador != this.idUserGreaGrupo" (click)="salirDelGrupo(grupo)" slot="end" color="warning">
