--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -42,7 +42,7 @@
   --ion-color-secondary-tint: #5A5A5A;
 
   /** tertiary **/
-  --ion-color-tertiary: #5260ff;
+  --ion-color-tertiary: #25D366;
   --ion-color-tertiary-rgb: 82, 96, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
@@ -121,8 +121,8 @@
     --ion-color-secondary-contrast-rgb: 255,255,255;
     --ion-color-secondary-shade: #878585;
     --ion-color-secondary-tint: #878585;
-
-    --ion-color-tertiary: #6a64ff;
+    
+    --ion-color-tertiary: #25D366;
     --ion-color-tertiary-rgb: 106,100,255;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255,255,255;
