--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -10,60 +10,157 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="bg-image no-scroll desenfoque">
+<ion-content class="bg-image no-scroll desenfoque display-flex">
   <ion-row>
-    <ion-col [size]="12" class="display-flex " style="padding-top: 2rem">
-      <p class="margin-auto"> <img src="./assets/img/profile-circle.png" class="margin-auto" height="80px" width="90px"> </p>
+    <ion-col class="margin-auto">
+    <ion-row>
+      <ion-col [size]="12" class="display-flex " style="padding-top: 2rem">
+        <p class="margin-auto"><img src="./assets/img/profile-circle.png" class="margin-auto" height="80px"
+                                    width="90px"></p>
+      </ion-col>
+
+    </ion-row>
+
+      <ion-row class="form-style">
+        <ion-col [size]="12" class="ion-no-padding ion-no-margin">
+        <form [formGroup]="userForm">
+          <ion-row justify-content-center>
+            <ion-col align-self-center class="desenfoque" style="border-radius: 0.5rem" [size]="12">
+              <ion-row>
+                <ion-label>Nombre personal</ion-label>
+                <ion-col [size]="12">
+                  <ion-item class="item" lines="full">
+                    <ion-input class=" form-control text-input" type="text" required formControlName="name"
+                               (input)="onNameInput()"></ion-input>
+                    <ion-icon *ngIf="nameHasError('required')" name="close-circle" color="danger"></ion-icon>
+                    <ion-icon *ngIf="nameHasError('minlength')" name="close-circle" color="danger"></ion-icon>
+                    <ion-icon *ngIf="nameIsValid()" name="checkmark-circle" color="tertiary"></ion-icon>
+                    <ion-icon *ngIf="nameIsInvalid() && !nameHasError('required') && !nameHasError('minlength')"
+                              name="close-circle" color="danger"></ion-icon>
+                  </ion-item>
+
+                  <ion-row>
+                    <ion-col class="display-flex">
+                      <ion-text color="danger" class="margin-auto" style=" border-radius: 0.5rem"
+                                *ngIf="nameHasError('required')">El nombre es obligatorio
+                      </ion-text>
+                      <ion-text color="danger" class="margin-auto" style="border-radius: 0.5rem"
+                                *ngIf="nameHasError('minlength')">El nombre debe tener al menos 2 caracteres
+                      </ion-text>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+              </ion-row>
+
+
+              <ion-row>
+                <ion-label>Usuario</ion-label>
+                <ion-col [size]="12">
+                  <ion-item class="item" lines="full">
+                    <ion-input class="text-white form-control text-input" formControlName="username"
+                               placeholder="Julian97" type="text" required (input)="onUsernameInput()"></ion-input>
+                    <ion-icon *ngIf="usernameHasError('required')" name="close-circle" color="danger"></ion-icon>
+                    <ion-icon *ngIf="usernameHasError('invalidUsername')" name="close-circle" color="danger"></ion-icon>
+                    <ion-icon *ngIf="usernameIsValid()" name="checkmark-circle" color="tertiary"></ion-icon>
+                  </ion-item>
+                  <ion-row>
+                    <ion-col class="display-flex">
+                      <ion-text color="danger" class="margin-auto" style=" border-radius: 0.5rem"
+                                *ngIf="usernameHasError('required')">El nombre de usuario es obligatorio.
+                      </ion-text>
+                      <ion-text color="danger" class="margin-auto" style=" border-radius: 0.5rem"
+                                *ngIf="usernameHasError('invalidUsername')">El nombre de usuario debe tener entre 4 y 20
+                        caracteres y no debe contener caracteres especiales.
+                      </ion-text>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+              </ion-row>
+
+
+              <ion-row>
+                <ion-label>Correo electrónico</ion-label>
+                <ion-col [size]="12">
+                  <ion-item class="item" lines="full">
+                    <ion-input type="email" formControlName="email" (input)="onEmailInput()"></ion-input>
+                    <ion-icon name="checkmark-circle" color="tertiary" *ngIf="emailIsValid()"></ion-icon>
+                    <ion-icon name="close-circle" color="danger" *ngIf="emailHasError('required')"></ion-icon>
+                    <ion-icon name="close-circle" color="danger" *ngIf="emailHasError('email')"></ion-icon>
+                  </ion-item>
+                  <ion-row>
+                    <ion-col class="display-flex">
+                      <ion-text color="danger" class="margin-auto" *ngIf="emailHasError('required')">El correo
+                        electrónico
+                        es
+                        obligatorio
+                      </ion-text>
+                      <ion-text color="danger" class="margin-auto" *ngIf="emailHasError('email')">Ingresa un correo
+                        electrónico
+                        válido
+                      </ion-text>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+              </ion-row>
+
+
+              <ion-row>
+                <ion-label>Contraseña</ion-label>
+                <ion-col [size]="12">
+                  <ion-item class="item">
+                    <ion-input class="text-white form-control text-input" formControlName="password"
+                               placeholder="*****" [type]="passwordVisible ? 'text' : 'password'" required (input)="onPasswordInput()"></ion-input>
+                    <ion-icon *ngIf="passwordHasError('required')" name="close-circle" color="danger" slot="end"></ion-icon>
+                    <ion-icon *ngIf="passwordHasError('invalidPassword')" name="close-circle" color="danger" slot="end"></ion-icon>
+                    <ion-icon *ngIf="passwordIsValid()" name="checkmark-circle" color="tertiary" slot="end"></ion-icon>
+                    <ion-icon name="eye" slot="end" *ngIf="!passwordVisible" (click)="passwordVisible = true"></ion-icon>
+                    <ion-icon name="eye-off" slot="end" *ngIf="passwordVisible" (click)="passwordVisible = false"></ion-icon>
+                  </ion-item>
+                  <ion-row>
+                    <ion-col class="display-flex">
+                      <ion-text color="danger" class="margin-auto" style=" border-radius: 0.5rem"
+                                *ngIf="passwordHasError('required')">Contraseña requerida
+                      </ion-text>
+                      <ion-text color="danger" class="margin-auto" style="border-radius: 0.5rem"
+                                *ngIf="passwordHasError('invalidPassword')">La contraseña debe contener al menos una letra
+                        mayúscula, un número y tener al menos 8 caracteres
+                      </ion-text>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+              </ion-row>
+
+              <ion-row>
+                <ion-label>Confirmar contraseña</ion-label>
+                <ion-col [size]="12">
+                  <ion-item class="item">
+                    <ion-input class="text-white form-control text-input" formControlName="confirmPassword"
+                               placeholder="*****" [type]="passwordRepeatVisible ? 'text' : 'password'" required (input)="onConfirmPasswordInput()"></ion-input>
+                    <ion-icon *ngIf="confirmPasswordHasError('required')" name="close-circle" color="danger"></ion-icon>
+                    <ion-icon *ngIf="confirmPasswordHasError('passwordMismatch')" name="close-circle" color="danger"></ion-icon>
+                    <ion-icon *ngIf="confirmPasswordIsValid()" name="checkmark-circle" color="tertiary"></ion-icon>
+                    <ion-icon name="eye" slot="end" *ngIf="!passwordRepeatVisible" (click)="passwordRepeatVisible = true"></ion-icon>
+                    <ion-icon name="eye-off" slot="end" *ngIf="passwordRepeatVisible" (click)="passwordRepeatVisible = false"></ion-icon>
+                  </ion-item>
+                  <ion-row>
+                    <ion-col class="display-flex">
+                      <ion-text color="danger" class="margin-auto" style=" border-radius: 0.5rem"
+                                *ngIf="confirmPasswordHasError('required')">Repetir contraseña requerida
+                      </ion-text>
+                      <ion-text color="danger" class="margin-auto" style="border-radius: 0.5rem"
+                                *ngIf="confirmPasswordHasError('passwordMismatch')">Las contraseñas no coinciden
+                      </ion-text>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+              </ion-row>
+              <ion-button expand="block" color="primary" (click)="signUp()" [disabled]="!userForm.valid || !userForm.dirty">Registrar</ion-button>
+   
+            </ion-col>
+          </ion-row>
+        </form>
+        </ion-col>
+      </ion-row>
     </ion-col>
-
   </ion-row>
-
-  <form>
-    <div class="ion-margin">
-      <ion-row style="padding-top: 1rem" class="text">
-        <ion-label class="label">Nombre: </ion-label>
-      </ion-row>
-      <ion-row justify-content-center>
-        <ion-col align-self-center [size]="12">
-          <ion-item class="item">
-            <ion-input name="name" [(ngModel)]="user.name" type="email" class="form-control" placeholder="Julian" ngModel required></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row style="padding-top: 1rem" class="text">
-        <ion-label class="label">Usuario: </ion-label>
-      </ion-row>
-      <ion-row justify-content-center>
-        <ion-col align-self-center [size]="12">
-          <ion-item class="item">
-            <ion-input name="userName" [(ngModel)]="user.userName" type="text" class="form-control" placeholder="Juan56" ngModel required></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row style="padding-top: 1rem" class="text">
-        <ion-label class="label">Email: </ion-label>
-      </ion-row>
-      <ion-row justify-content-center>
-        <ion-col align-self-center [size]="12">
-          <ion-item class="item">
-            <ion-input name="email" [(ngModel)]="user.email"  type="email" class="form-control" placeholder="julicapponi@hotmail.com" ngModel required></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-
-      <ion-row style="padding-top: 1rem" class="text">
-        <ion-label class="label">Contraseña: </ion-label>
-      </ion-row>
-      <ion-row justify-content-center>
-        <ion-col align-self-center [size]="12">
-          <ion-item class="item">
-            <ion-input  name="password" [(ngModel)]="user.password" type="password" class="form-control" placeholder="Contraseña" ngModel required></ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-    </div>
-    <div class="ion-margin display-flex" >
-      <ion-button class="margin-auto" size="medium" (click)="signUp(user)" expand="block">Registrar</ion-button>
-    </div>
-  </form>
 </ion-content>
