constante api url, modificacion urls

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content class="bg-image-black no-scroll">
-  <div class="center-icon-loading" >
-    <img src='assets/img/loader2.svg'>
-    <h1 style="color: #F26633"> CARGANDO... </h1>
+  <div class="center-icon-loading " >
+    <img class="bounce-out-top img-inicial" src="assets/img/football-icon-login.png">
+    <h1 class="blur-out-expand" style="color: #F26633"> CARGANDO... </h1>
   </div>
 </ion-content>
